--- a/UnscrambleGame/app/src/main/res/layout/game_fragment.xml
+++ b/UnscrambleGame/app/src/main/res/layout/game_fragment.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="gameViewModel"
+            type="com.example.android.unscramble.ui.game.GameViewModel" />
+        <variable
+            name="maxNoOfWords"
+            type="int" />
+    </data>
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -52,6 +60,7 @@
             android:layout_marginTop="@dimen/default_margin"
             android:layout_marginBottom="@dimen/default_margin"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
+            android:text="@{gameViewModel.currentScrambledWord}"
             app:layout_constraintBottom_toTopOf="@+id/textView_instructions"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +71,7 @@
             android:id="@+id/word_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/word_count"
+            android:text="@{@string/word_count(gameViewModel.currentWordCount, maxNoOfWords)}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintBottom_toTopOf="@+id/textView_unscrambled_word"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +82,7 @@
             android:id="@+id/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/score"
+            android:text="@{@string/score(gameViewModel.score)}"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintEnd_toEndOf="parent"
@@ -104,3 +113,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
+
+</layout>
